syntax = "proto3";

package api.dexx;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "public/response/response.proto";
import "validate/validate.proto";
import "dexx/common.proto";


option go_package = "store/api/dexx;dexxpb";

message Token {

  message Metadata {
    string name = 1;
    string symbol = 2;
    string description = 3;
    string image = 4;
    string createdOn = 5;
    string twitter = 6;
    string website = 7;
    string uri = 8;
    string id = 9;
    int64 decimals = 10;
  }

  message WalletStates {
    bool following = 1;
  }

  string  id = 1;
  Metadata metadata = 2;
  int64 createdAt = 6;
  api.dexx.Amount price = 11;
  api.dexx.Amount supply = 14;
  map<string, OHLCState> ohlcStates = 20;
  map<string, TradeState> tradeStates = 21;
  WalletStates walletStates = 22;
}

message OHLCState {
  double open = 1;
  double close = 2;
  double low = 3;
  double high = 4;
  double changeRate = 5;
}

message TradeState {
  api.dexx.Amount buyVolume = 2;
  api.dexx.Amount sellVolume = 3;
  int64 buyCount = 4;
  int64 sellCount = 5;
  int64 tradeCount = 6;
  int64 traderCount = 7;
  int64 buyerCount = 8;
  int64 sellerCount = 9;
}


